# XO_Project

./: CMakeLists.txt  CMakeLists.txt.user.c88fbdc  GameData.cpp  GameData.h  README.md  ai.cpp  ai.h  aipage.cpp  aipage.h  aipage.ui  game.cpp  game.hpp  game_logic.cpp  game_logic.h  game_wrapper.cpp  game_wrapper.h  gameboard.cpp  gameboard.h  gameboard.ui  gamehistory.cpp  gamehistory.h  gamehistory.ui  gamereplay.cpp  gamereplay.h  gamereplay.ui  gui1.cpp  headstats.ui  history.cpp  history.h  history.ui  main.cpp  mainscreen.cpp  mainscreen.h  mainscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  signup.cpp  signup.h  (+14 more)
.github/workflows/: GameData.yml  ai.yml  aipage.yml  blank.yml  game_logic.yml  game_wrapper.yml  gameboard.yml  history.yml  main.yml  mainscreen.yml  mainwindow.yml  signup,yml  test_ai.yml  turnpage.yml  user_system.yml
Tic_Tac_Toe_Gui/: CMakeLists.txt  aipage.ui  mainwindow.cpp  signup.h
